# yast-dirinstall

./: .cvsignore  .gitignore  RPMNAME  configure.in.in  yast2-dirinstall.spec.in
agents/: Makefile.am
control/: Makefile.am
doc/: Makefile.am
doc/autodocs/: Makefile.am
package/: yast2-dirinstall.changes  yast2-dirinstall.spec
src/: Makefile.am
src/clients/: dirinstall.rb  dirinstall.ycp  dirinstall_options.rb  dirinstall_options.ycp  dirinstall_options_proposal.rb  dirinstall_options_proposal.ycp  inst_dirinstall.rb  inst_dirinstall.ycp  inst_dirinstall_finish.rb  inst_dirinstall_finish.ycp
src/config/: Makefile.am  dirinstall.desktop  dirinstall.xml
src/include/: ui.ycp
src/include/dirinstall/: ui.rb  ui.ycp
src/modules/: DirInstall.rb  DirInstall.ycp  Makefile.am
